# rust-goldberg

./: Cargo.toml  LICENSE  README.md  build-web.sh  build.rs  index.html  style.css
assets/entities/: cannon-2m.json
assets/levels/: default.json  dominos_olc.json
assets/models/Domino_tiles/: test.blend  test.blend1  test.glb
assets/models/ball/: ball.blend  ball.mtl
assets/models/blender_cube/: cube.blend  cube.glb  cube.gltf
assets/models/cannon/: cannon.blend  cannon.blend1  cannon.mtl
assets/models/cannonball-1m/: cannonball-1m.blend  cannonball-1m.mtl
assets/models/cubey/: cube.blend  cube.blend1  cube.mtl
assets/models/domino/: domino.blend  domino.blend1  domino.mtl
assets/models/primitives/: Domino.glb  cubey.blend  cubey.mtl  domino.blend  domino.blend1  domino.mtl  platform-10m.blend  platform-10m.mtl  steps-down-4.blend  steps-down-4.mtl  steps-up-4.blend  steps-up-4.mtl
assets/models/steps/: steps.blend  steps.blend1  steps.mtl
assets/models/world_base/: world_base.blend  world_base.blend1  world_base.glb  world_base.glb.gltf
assets/primitives/: ball-1m.json  ball-2m.json  cubey-1x1.json  cubey-2x2.json  cubey-4x4.json  cubey.json  domino-1x2.json  domino-2x4.json  domino-4x8.json  domino.json  platform-10m.json  steps-1m.json  steps-2m.json  steps-4m.json  steps-down-4.json  steps-up-4.json
assets/primitives_hidden/: cannon-ball-1m.json
docs/: level_edit.txt  primitive_ingest.txt
src/: datatypes.rs  engine.rs  gltfloader.rs  interactions.rs  lib.rs  main.rs  physicsbuilders.rs  types.rs
