[package]
name = "three-d-demo"
version = "0.1.0"
authors = ["Gareth Francis <gfrancis.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "/home/gareth/source/three-d" }
wasm-bindgen = "0.2.67"
log = "0.4.11"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
gltf = { version = "0.15.2", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_unlit"] }
nphysics3d = { version = "0.17.0", features = ["dim3", "use-wasm-bindgen"] }
ncollide3d = { version = "0.24.0" }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
nalgebra = { version = "0.22.0" }
cgmath = { version = "0.17.0" }
